--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@types/react-dom": "^18.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-icons": "^4.4.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "npx jest --watchAll --verbose"
   },
   "eslintConfig": {
     "extends": [
@@ -38,16 +38,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@testing-library/dom": "^10.4.0",
-    "typescript": "^5.3.3",
-    "msw": "^2.4.11"
-  },
-  "jest": {
-    "transformIgnorePatterns": [
-      "node_modules/(?!@bundled-es-modules)/"
-    ]
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.9",
+    "msw": "^2.4.11",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.3.3"
   }
 }
