--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "npx jest --watchAll --verbose"
+    "test": "jest --watchAll --verbose"
   },
   "eslintConfig": {
     "extends": [
