--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "msw": "^2.4.11",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite": "^7.1.5"
   },
   "scripts": {
     "dev": "vite",
